--- a/fetch-rum-insights/action.yml
+++ b/fetch-rum-insights/action.yml
@@ -11,6 +11,9 @@ inputs:
     description: The number of days to get the data
     required: false
     default: 30
+outputs:
+  data: # id of output
+    description: 'A JSON object represneting the RUM data organized by page and experiment'
 runs:
   using: 'node20'
   main: 'dist/index.js'
