feat: add run mab github action

--- a/run-mab/Dockerfile
+++ b/run-mab/Dockerfile
@@ -5,4 +5,5 @@ COPY main.sh /work/main.sh
 COPY main.py /work/main.py
 WORKDIR /work
 RUN pip install -r requirements.txt
-ENTRYPOINT ['main.sh']
+WORKDIR /work
+ENTRYPOINT ['./main.sh']
