feat: add run mab github action

--- a/run-mab/Dockerfile
+++ b/run-mab/Dockerfile
@@ -5,5 +5,4 @@ COPY main.sh /work/main.sh
 COPY main.py /work/main.py
 WORKDIR /work
 RUN pip install -r requirements.txt
-WORKDIR /work
-ENTRYPOINT ['./main.sh']
+CMD ['python', './main.py']
