--- a/run-mab/Dockerfile
+++ b/run-mab/Dockerfile
@@ -5,4 +5,4 @@ COPY main.sh /work/main.sh
 COPY main.py /work/main.py
 WORKDIR /work
 RUN pip install -r requirements.txt
-CMD ['python', './main.py']
+CMD ['python3', './main.py']
