--- a/run-mab/action.yml
+++ b/run-mab/action.yml
@@ -14,4 +14,4 @@ outputs:
     description: 'A JSON object representing the MAB config to run on the website for each page and experiment'
 runs:
   using: docker
-  image: Dockerfile
+  image: ghcr.io/sudo-buddy/python_3.10.14_mab:latest
