--- a/run-mab/Dockerfile
+++ b/run-mab/Dockerfile
@@ -1,7 +1,8 @@
 FROM python:3.10.14
 
-COPY requirements.txt /requirements.txt
+# COPY requirements.txt /requirements.txt
 COPY main.py /main.py
+COPY main.sh /main.sh
 
-RUN pip install -r /requirements.txt
-ENTRYPOINT ['/main.py']
+# RUN pip install -r /requirements.txt
+ENTRYPOINT ["/main.sh"]
