feat: add run mab github action

--- a/run-mab/Dockerfile
+++ b/run-mab/Dockerfile
@@ -1,8 +1,8 @@
 FROM python:3.10.14
 
-# COPY requirements.txt /requirements.txt
+COPY requirements.txt /requirements.txt
 COPY main.py /main.py
 COPY main.sh /main.sh
 
 # RUN pip install -r /requirements.txt
-ENTRYPOINT ["/main.sh"]
+ENTRYPOINT ["/main.sh", "${INPUT_RUM-DATA}", "${INPUT_CONVERSION-NAME}", "${INPUT_CONVERSION-VALUE}"]
