--- a/run-mab/action.yml
+++ b/run-mab/action.yml
@@ -1,13 +1,13 @@
 name: Run MAB algorithm
 description: Run the multi-arm bandit algorithm for experiments
 inputs:
-  rum-data:
+  rum_data:
     description: A JSON object representing the RUM data organized by page and experiment
     required: true
-  conversion-name:
+  conversion_name:
     description: The name for the checkpoint to use for the conversion
     default: convert
-  conversion-value:
+  conversion_value:
     description: A specific value to use for the conversion checkpoint
 outputs:
   config:
